--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "@vuepress-reco/vuepress-plugin-comments": "^1.6.13"
   },
   "scripts": {
-    "fc": "node formateGit.js"
+    "fc": "node formateGit.js",
+    "deploy": "vuepress build && gh-pages -d dist"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
