--- a/vuepress/package.json
+++ b/vuepress/package.json
@@ -8,15 +8,19 @@
   "scripts": {
     "dev": "vuepress dev .",
     "start": "vuepress dev .",
-    "build": "vuepress build ."
+    "build": "vuepress build .",
+    "deploy": "vuepress build && gh-pages -d dist"
   },
   "dependencies": {
     "@type-challenges/utils": "^0.1.1",
+    "ejs": "^3.1.9",
+    "fs": "^0.0.1-security",
     "less": "^4.1.3",
     "vuepress": "2.0.0-beta.51",
     "vuepress-theme-reco": "2.0.0-beta.41"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "vuepress-plugin-sitemap2": "^2.0.0-beta.99"
   }
 }
