--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
       # 生成静态文件
       - name: Build
-        run: cd vuepress && yarn && yarn build
+        run: cd vuepress && yarn && yarn deploy
 
       # 部署到 GitHub Pages
       - name: Deploy
