--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,13 @@ jobs:
     steps:
       # 拉取代码
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           persist-credentials: false
 
       # 生成静态文件
       - name: Build
-        run: cd vuepress && npm run build
+        run: cd vuepress && npm insatll &&  npm run build
 
       # 部署到 GitHub Pages
       - name: Deploy
@@ -29,4 +29,4 @@ jobs:
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 也就是我们刚才生成的 secret
           BRANCH: gh-pages # 部署到 gh-pages 分支，因为 main 分支存放的一般是源码，而 gh-pages 分支则用来存放生成的静态文件
-          FOLDER: vuepress/.vuepress/dist # vuepress 生成的静态文件存放的地方
+          FOLDER: vuepress/.vuepress/dist
