--- a/vuepress/package.json
+++ b/vuepress/package.json
@@ -6,7 +6,6 @@
   "author": "reco_luan <recoluan@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "vuepress dev .",
     "start": "vuepress dev .",
     "build": "vuepress build .",
     "deploy": "vuepress build -d && gh-pages -d dist"
@@ -17,10 +16,10 @@
     "fs": "^0.0.1-security",
     "less": "^4.1.3",
     "vuepress": "2.0.0-beta.51",
-    "vuepress-theme-reco": "2.0.0-beta.41"
+    "vuepress-theme-reco": "2.0.0-beta.41",
+    "gh-pages": "^5.0.0"
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0",
     "vuepress-plugin-sitemap2": "^2.0.0-beta.99"
   }
 }
