--- a/vuepress/package.json
+++ b/vuepress/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "vuepress dev .",
     "build": "vuepress build .",
-    "deploy": "vuepress build docs"
+    "deploy": "vuepress build vuepress"
   },
   "dependencies": {
     "@type-challenges/utils": "^0.1.1",
