--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v2
         with:
-          target_branch: gh-pages # 部署到 gh-pages 分支，因为 main 分支存放的一般是源码，而 gh-pages 分支则用来存放生成的静态文件
-          build_dir: vuepress/.vuepress/dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }} # 也就是我们刚才生成的 secret
+          ACCESS_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: vuepress/.vuepress/dist
