--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,5 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           BRANCH: gh-pages
           FOLDER: vuepress/.vuepress/dist
+        env:
+           GITHUB_TOKEN: ${{ secrets.ACTIONS_DEPLOY_KEY }}
