--- a/vuepress/package.json
+++ b/vuepress/package.json
@@ -19,6 +19,6 @@
     "gh-pages": "^5.0.0"
   },
   "devDependencies": {
-    "vuepress-plugin-sitemap2": "^2.0.0-beta.99"
+    "vuepress-plugin-sitemap2": "1.0.0"
   }
 }
