--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,28 @@
-name: deploy
-
+name: Build app and deploy to Tencent
 on:
+  #监听push操作
   push:
-    branches: [master]
+    branches:
+      # mian分支，你也可以改成其他分支
+      - master
 
 jobs:
-  deploy:
+  # 任务ID
+  build:
+    # 运行环境
     runs-on: ubuntu-latest
+    # 步骤
     steps:
+      # 使用别人的action
       - uses: actions/checkout@v2
-
-
-      - name: Install and Build
-        run: |
-          yarn install
-          cd vuepress && yarn build
+      # 步骤名称
+      - name: yarn&build
+        # 步骤执行指令
+        run: sh deploy.sh
 
       - name: Deploy to github pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
           commit_message: deploy to github pages
-          publish_dir: ./vuepress/.vuepress/dist
+          publish_dir: "./vuepress/.vuepress/dist/*"
