fix: package.json

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
-          commit_message: "deploy to github pages"
+          commit_message: deploy to github pages
           publish_dir: "./vuepress/docs/.vuepress/dist/*"
