--- a/vuepress/package.json
+++ b/vuepress/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "vuepress dev .",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "deploy": "vuepress build ."
   },
   "dependencies": {
     "@type-challenges/utils": "^0.1.1",
