--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
           commit_message: deploy to github pages
-          publish_dir: ./vuepress/docs/.vuepress/dist
+          publish_dir: ./vuepress/docs/.vuepress/dist/*
